--- a/_open_api/example/petstore-jwt.yml
+++ b/_open_api/example/petstore-jwt.yml
@@ -18,6 +18,8 @@ paths:
       summary: Retrieve all pets
       description: Returns all pets from the system that the user has access to
       operationId: findPets
+      security:
+        - jwt
       parameters:
         - name: tags
           in: query
@@ -74,98 +76,12 @@ paths:
             text/html:
               schema:
                 $ref: '#/components/schemas/ErrorModel'
-    post:
-      summary: Create a new pet
-      description: Creates a new pet in the store.  Duplicates are allowed
-      operationId: addPet
-      responses:
-        '200':
-          description: pet response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Pet'
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorModel'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/NewPet'
-        description: Pet to add to the store
-        required: true
-  '/pets/{id}':
-    get:
-      summary: Retrieve a specific pet
-      description: >-
-        Returns a user based on a single ID, if the user does not have access to
-        the pet
-      operationId: findPetById
-      parameters:
-        - name: id
-          in: path
-          description: ID of pet to fetch
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '200':
-          description: pet response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Pet'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Pet'
-            text/xml:
-              schema:
-                $ref: '#/components/schemas/Pet'
-            text/html:
-              schema:
-                $ref: '#/components/schemas/Pet'
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorModel'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/ErrorModel'
-            text/xml:
-              schema:
-                $ref: '#/components/schemas/ErrorModel'
-            text/html:
-              schema:
-                $ref: '#/components/schemas/ErrorModel'
-    delete:
-      summary: Delete a pet
-      description: deletes a single pet based on the ID supplied
-      operationId: deletePet
-      parameters:
-        - name: id
-          in: path
-          description: ID of pet to delete
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '204':
-          description: pet deleted
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorModel'
 components:
+  securitySchemes:
+    jwt:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     Pet:
       type: object
