--- a/spec/fixtures/open_api/petstore-expanded.yml
+++ b/spec/fixtures/open_api/petstore-expanded.yml
@@ -1,24 +1,20 @@
-swagger: "2.0"
+openapi: 3.0.0
+servers:
+  - url: 'http://petstore.swagger.io/api'
 info:
   version: 1.0.0
   title: Swagger Petstore
-  description: A sample API that uses a petstore as an example to demonstrate features in the swagger-2.0 specification
-  termsOfService: http://swagger.io/terms/
+  description: >-
+    A sample API that uses a petstore as an example to demonstrate features in
+    the swagger-2.0 specification
+  termsOfService: 'http://swagger.io/terms/'
   contact:
     name: Swagger API Team
     email: foo@example.com
-    url: http://madskristensen.net
+    url: 'http://madskristensen.net'
   license:
     name: MIT
-    url: http://github.com/gruntjs/grunt/blob/master/LICENSE-MIT
-host: petstore.swagger.io
-basePath: /api
-schemes:
-  - http
-consumes:
-  - application/json
-produces:
-  - application/json
+    url: 'http://github.com/gruntjs/grunt/blob/master/LICENSE-MIT'
 paths:
   /pets:
     get:
@@ -30,66 +26,83 @@ paths:
           in: query
           description: tags to filter by
           required: false
-          type: array
-          collectionFormat: csv
-          items:
-            type: string
+          style: form
+          schema:
+            type: array
+            items:
+              type: string
         - name: limit
           in: query
           description: maximum number of results to return
           required: false
-          type: integer
-          format: int32
-      responses:
-        "200":
-          description: pet response
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/Pet'
+            type: integer
+            format: int32
+      responses:
+        '200':
+          description: pet response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
         default:
           description: unexpected error
-          schema:
-            $ref: '#/definitions/Error'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
     post:
       description: Creates a new pet in the store.  Duplicates are allowed
       operationId: addPet
-      parameters:
-        - name: pet
-          in: body
-          description: Pet to add to the store
-          required: true
-          schema:
-            $ref: '#/definitions/NewPet'
       responses:
-        "200":
+        '200':
           description: pet response
-          schema:
-            $ref: '#/definitions/Pet'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Pet'
         default:
           description: unexpected error
-          schema:
-            $ref: '#/definitions/Error'
-  /pets/{id}:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewPet'
+        description: Pet to add to the store
+        required: true
+  '/pets/{id}':
     get:
-      description: Returns a user based on a single ID, if the user does not have access to the pet
+      description: >-
+        Returns a user based on a single ID, if the user does not have access to
+        the pet
       operationId: find pet by id
       parameters:
         - name: id
           in: path
           description: ID of pet to fetch
           required: true
-          type: integer
-          format: int64
-      responses:
-        "200":
-          description: pet response
           schema:
-            $ref: '#/definitions/Pet'
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: pet response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Pet'
         default:
           description: unexpected error
-          schema:
-            $ref: '#/definitions/Error'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
     delete:
       description: deletes a single pet based on the ID supplied
       operationId: deletePet
@@ -98,42 +111,44 @@ paths:
           in: path
           description: ID of pet to delete
           required: true
-          type: integer
-          format: int64
+          schema:
+            type: integer
+            format: int64
       responses:
-        "204":
+        '204':
           description: pet deleted
         default:
           description: unexpected error
-          schema:
-            $ref: '#/definitions/Error'
-definitions:
-  Pet:
-    allOf:
-      - $ref: '#/definitions/NewPet'
-      - required:
-        - id
-        properties:
-          id:
-            type: integer
-            format: int64
-
-  NewPet:
-    required:
-      - name
-    properties:
-      name:
-        type: string
-      tag:
-        type: string
-
-  Error:
-    required:
-      - code
-      - message
-    properties:
-      code:
-        type: integer
-        format: int32
-      message:
-        type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+components:
+  schemas:
+    Pet:
+      allOf:
+        - $ref: '#/components/schemas/NewPet'
+        - required:
+            - id
+          properties:
+            id:
+              type: integer
+              format: int64
+    NewPet:
+      required:
+        - name
+      properties:
+        name:
+          type: string
+        tag:
+          type: string
+    Error:
+      required:
+        - code
+        - message
+      properties:
+        code:
+          type: integer
+          format: int32
+        message:
+          type: string
