--- a/spec/fixtures/open_api/petstore.yml
+++ b/spec/fixtures/open_api/petstore.yml
@@ -1,156 +1,195 @@
----
-  swagger: "2.0"
-  info:
-    version: "1.0.0"
-    title: "Swagger Petstore"
-    description: "A sample API that uses a petstore as an example to demonstrate features in the swagger-2.0 specification"
-    termsOfService: "http://swagger.io/terms/"
-    contact:
-      name: "Swagger API Team"
-    license:
-      name: "MIT"
-  host: "petstore.swagger.io"
-  basePath: "/api"
-  schemes:
-    - "http"
-  consumes:
-    - "application/json"
-  produces:
-    - "application/json"
-  paths:
-    /pets:
-      get:
-        description: "Returns all pets from the system that the user has access to"
-        operationId: "findPets"
-        produces:
-          - "application/json"
-          - "application/xml"
-          - "text/xml"
-          - "text/html"
-        parameters:
-          -
-            name: "tags"
-            in: "query"
-            description: "tags to filter by"
-            required: false
-            type: "array"
+openapi: 3.0.0
+servers:
+  - url: 'http://petstore.swagger.io/api'
+info:
+  version: 1.0.0
+  title: Swagger Petstore
+  description: >-
+    A sample API that uses a petstore as an example to demonstrate features in
+    the swagger-2.0 specification
+  termsOfService: 'http://swagger.io/terms/'
+  contact:
+    name: Swagger API Team
+  license:
+    name: MIT
+paths:
+  /pets:
+    get:
+      description: Returns all pets from the system that the user has access to
+      operationId: findPets
+      parameters:
+        - name: tags
+          in: query
+          description: tags to filter by
+          required: false
+          style: form
+          schema:
+            type: array
             items:
-              type: "string"
-            collectionFormat: "csv"
-          -
-            name: "limit"
-            in: "query"
-            description: "maximum number of results to return"
-            required: false
-            type: "integer"
-            format: "int32"
-        responses:
-          "200":
-            description: "pet response"
+              type: string
+        - name: limit
+          in: query
+          description: maximum number of results to return
+          required: false
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '200':
+          description: pet response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+            application/xml:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+            text/xml:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+            text/html:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+            text/xml:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+            text/html:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+    post:
+      description: Creates a new pet in the store.  Duplicates are allowed
+      operationId: addPet
+      responses:
+        '200':
+          description: pet response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Pet'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+      requestBody:
+        content:
+          application/json:
             schema:
-              type: "array"
-              items:
-                $ref: "#/definitions/Pet"
-          default:
-            description: "unexpected error"
-            schema:
-              $ref: "#/definitions/ErrorModel"
-      post:
-        description: "Creates a new pet in the store.  Duplicates are allowed"
-        operationId: "addPet"
-        produces:
-          - "application/json"
-        parameters:
-          -
-            name: "pet"
-            in: "body"
-            description: "Pet to add to the store"
-            required: true
-            schema:
-              $ref: "#/definitions/NewPet"
-        responses:
-          "200":
-            description: "pet response"
-            schema:
-              $ref: "#/definitions/Pet"
-          default:
-            description: "unexpected error"
-            schema:
-              $ref: "#/definitions/ErrorModel"
-    /pets/{id}:
-      get:
-        description: "Returns a user based on a single ID, if the user does not have access to the pet"
-        operationId: "findPetById"
-        produces:
-          - "application/json"
-          - "application/xml"
-          - "text/xml"
-          - "text/html"
-        parameters:
-          -
-            name: "id"
-            in: "path"
-            description: "ID of pet to fetch"
-            required: true
-            type: "integer"
-            format: "int64"
-        responses:
-          "200":
-            description: "pet response"
-            schema:
-              $ref: "#/definitions/Pet"
-          default:
-            description: "unexpected error"
-            schema:
-              $ref: "#/definitions/ErrorModel"
-      delete:
-        description: "deletes a single pet based on the ID supplied"
-        operationId: "deletePet"
-        parameters:
-          -
-            name: "id"
-            in: "path"
-            description: "ID of pet to delete"
-            required: true
-            type: "integer"
-            format: "int64"
-        responses:
-          "204":
-            description: "pet deleted"
-          default:
-            description: "unexpected error"
-            schema:
-              $ref: "#/definitions/ErrorModel"
-  definitions:
+              $ref: '#/components/schemas/NewPet'
+        description: Pet to add to the store
+        required: true
+  '/pets/{id}':
+    get:
+      description: >-
+        Returns a user based on a single ID, if the user does not have access to
+        the pet
+      operationId: findPetById
+      parameters:
+        - name: id
+          in: path
+          description: ID of pet to fetch
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: pet response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Pet'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Pet'
+            text/xml:
+              schema:
+                $ref: '#/components/schemas/Pet'
+            text/html:
+              schema:
+                $ref: '#/components/schemas/Pet'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+            text/xml:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+            text/html:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+    delete:
+      description: deletes a single pet based on the ID supplied
+      operationId: deletePet
+      parameters:
+        - name: id
+          in: path
+          description: ID of pet to delete
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '204':
+          description: pet deleted
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorModel'
+components:
+  schemas:
     Pet:
-      type: "object"
+      type: object
       allOf:
-        -
-          $ref: "#/definitions/NewPet"
-        -
-          required:
-            - "id"
+        - $ref: '#/components/schemas/NewPet'
+        - required:
+            - id
           properties:
             id:
-              type: "integer"
-              format: "int64"
+              type: integer
+              format: int64
     NewPet:
-      type: "object"
+      type: object
       required:
-        - "name"
+        - name
       properties:
         name:
-          type: "string"
+          type: string
         tag:
-          type: "string"
+          type: string
     ErrorModel:
-      type: "object"
+      type: object
       required:
-        - "code"
-        - "message"
+        - code
+        - message
       properties:
         code:
-          type: "integer"
-          format: "int32"
+          type: integer
+          format: int32
         message:
-          type: "string"
+          type: string
