--- a/spec/fixtures/open_api/sms.yml
+++ b/spec/fixtures/open_api/sms.yml
@@ -1,110 +1,117 @@
-swagger: '2.0'
+openapi: 3.0.0
+servers:
+  - url: 'https://rest.nexmo.com/'
 info:
   title: SMS API
   version: v1.0.0
-host: rest.nexmo.com
-schemes:
-  - https
 paths:
   '/sms/{format}':
     post:
       summary: Send an SMS
       description: Send an outbound SMS from your Nexmo account
-      consumes:
-      - "application/x-www-form-urlencoded"
       parameters:
-        - type: string
-          enum: [json, xml]
-          name: format
+        - name: format
           description: The format of the response
           required: true
           in: path
-          default: json
           example: json
-        - type: string
-          maxLength: 8
-          minLength: 8
-          name: api_key
+          schema:
+            type: string
+            enum:
+              - json
+              - xml
+            default: json
+        - name: api_key
           description: Your API key
           required: true
           in: query
           example: abcd1234
-        - type: string
-          maxLength: 16
-          minLength: 16
-          name: api_secret
+          schema:
+            type: string
+            minLength: 8
+            maxLength: 8
+        - name: api_secret
           description: Your API secret
           required: true
           in: query
           example: abcdef1234567890
-        - type: string
-          maxLength: 12
-          minLength: 11
-          pattern: '\d{11,12}'
-          name: to
-          description: The number that the message should be sent to
-          required: true
-          in: formData
-          example: '447700900000'
-        - type: string
-          name: text
-          description: The body of the message being sent
-          required: false
-          in: formData
-          example: 'Hello world!'
-        - type: string
-          name: from
-          description: The name or number the message should be sent from
-          required: true
-          in: formData
-          example: 'Acme Inc'
-        - type: string
-          default: 'text'
-          enum: [text, binary, wappush, unicode, vcal, vard]
-          name: type
-          description: The format of the message body
-          required: false
-          in: formData
-          example: 'text'
-      responses:
-        200:
-          description: Success
           schema:
-            $ref: '#/definitions/SMS'
-definitions:
-  SMS:
-    type: object
-    properties:
-      message-count:
-        type: integer
-        description: The amount of messages that were sent
-        example: 1
-      messages:
-        $ref: "#/definitions/Message"
-  Message:
-    type: object
-    properties:
-      to:
-        type: string
-        description: The number the message was sent to
-        example: "447700900000"
-      message-id:
-        type: string
-        description: The ID of the message
-        example: "0A0000000123ABCD1"
-      status:
-        type: string
-        description: The status of the message
-        example: "0"
-      remaining-balance:
-        type: string
-        description: Your remaining balance
-        example: "3.14159265"
-      message-price:
-        type: string
-        description: The cost of the message
-        example: "0.03330000"
-      network:
-        type: string
-        description: The ID of the network of the recipient
-        example: "12345"
+            type: string
+            minLength: 16
+            maxLength: 16
+      responses:
+        '200':
+          description: Success
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/SMS'
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                to:
+                  description: The number that the message should be sent to
+                  type: string
+                  minLength: 11
+                  maxLength: 12
+                  pattern: '\d{11,12}'
+                text:
+                  description: The body of the message being sent
+                  type: string
+                from:
+                  description: The name or number the message should be sent from
+                  type: string
+                type:
+                  description: The format of the message body
+                  type: string
+                  enum:
+                    - text
+                    - binary
+                    - wappush
+                    - unicode
+                    - vcal
+                    - vard
+                  default: text
+              required:
+                - to
+components:
+  schemas:
+    SMS:
+      type: object
+      properties:
+        message-count:
+          type: integer
+          description: The amount of messages that were sent
+          example: 1
+        messages:
+          $ref: '#/components/schemas/Message'
+    Message:
+      type: object
+      properties:
+        to:
+          type: string
+          description: The number the message was sent to
+          example: '447700900000'
+        message-id:
+          type: string
+          description: The ID of the message
+          example: 0A0000000123ABCD1
+        status:
+          type: string
+          description: The status of the message
+          example: '0'
+        remaining-balance:
+          type: string
+          description: Your remaining balance
+          example: '3.14159265'
+        message-price:
+          type: string
+          description: The cost of the message
+          example: '0.03330000'
+        network:
+          type: string
+          description: The ID of the network of the recipient
+          example: '12345'
