Revert "Isolate NI from OAS changes"
This reverts commit 9b98cc183b80c7357a537e6e192ddd50bf1cabb0.

--- a/config/code_examples.yml
+++ b/config/code_examples.yml
@@ -126,3 +126,10 @@ voice:
   inbound-connect:
     node:
       source: '.repos/nexmo-community/nexmo-node-quickstart/voice/connect-an-inbound-call.js'
+number_insight:
+  standard:
+    curl:
+      source: '_examples/curl/number_insight/standard.sh'
+  async:
+    curl:
+      source: '_examples/curl/number_insight/async.sh'
