--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ services:
   - postgresql
 addons:
   postgresql: '9.4'
+
+# See: https://github.com/travis-ci/travis-ci/issues/8978
+before_install:
+  - gem update --system
+  - gem install bundler
+
 install: bundle install --deployment --path vendor/bundle
 before_script:
   - |
