Add redirects from old voice pages to new ones

--- a/config/redirects.yml
+++ b/config/redirects.yml
@@ -75,3 +75,15 @@
 "/messages-and-workflows-apis/messages/building-blocks": "/messages-and-workflows-apis/messages/building-blocks/send-an-sms-with-messages-api"
 "/messages-and-workflows-apis/workflows/building-blocks": "/messages-and-workflows-apis/workflows/building-blocks/send-a-message-with-failover"
 "/redact": "/redact/overview"
+
+"/voice/voice-api/guides/call-a-websocket": "/voice/voice-api/guides/websockets"
+"/voice/voice-api/guides/outbound-calls": "/voice/voice-api/guides/call-flow"
+"/voice/voice-api/guides/inbound-calls": "/voice/voice-api/guides/call-flow"
+"/voice/voice-api/guides/ssml": "/voice/voice-api/guides/text-to-speech"
+"/voice/voice-api/guides/handle-call-status": "/voice/voice-api/guides/event-url"
+"/voice/voice-api/guides/interactive-voice-response": "/tutorials/interactive-voice-response"
+"/voice/voice-api/guides/create-conferences": "/voice/voice-api/building-blocks/create-a-conference"
+"/voice/voice-api/guides/connect-two-users": "/tutorials/connect-two-users"
+"/voice/voice-api/guides/connecting-voice-calls-to-amazon-lex-bots": "/voice/voice-api/guides/lex-connector"
+"/voice/voice-api/guides/record-calls-and-conversations": "/voice/voice-api/guides/recording"
+"/voice/voice-api/guides/voice-app-components": "/voice/voice-api/overview"
