Move NCCO reference to have the normal sidebar

--- a/config/redirects.yml
+++ b/config/redirects.yml
@@ -31,8 +31,8 @@
 "/api/messages": "/api/developer/account"
 "/api/numbers": "/api/developer/account"
 "/events": "/community"
+"/api/voice/ncco": "/voice/voice-api/ncco-reference"
 "/voice/api-reference": "/voice/voice-api/api-reference"
-"/voice/voice-api/ncco-reference": "/api/voice/ncco"
 "/voice/voice-api/api-reference": "/api/voice"
 "/messaging/sms/api-reference": "/api/sms"
 "/verify/api-reference": "/api/verify"
