Make description more generic

--- a/_open_api/definitions/stitch.yml
+++ b/_open_api/definitions/stitch.yml
@@ -1478,7 +1478,7 @@ x-groups:
     name: "Leg"
     order: 4
     description: >-
-      A leg can be a video call, IP call, or PSTN calls that users participate in multiple platforms when using the Nexmo Stitch SDK. Using this endpoint you can retrieve the details about all of the legs that have occured in your application.
+      A leg can be a video call, IP call, or PSTN call that users participate in using multiple platforms. With this endpoint you can retrieve the details about all of the legs that took place in your application.
     schema:
       application/json:
         $ref: '#/components/schemas/Leg'
