--- a/_examples/voice/connect-an-inbound-call/PHP.yml
+++ b/_examples/voice/connect-an-inbound-call/PHP.yml
@@ -2,8 +2,9 @@
 title: PHP
 language: php
 dependencies:
-  - slim/slim
-source: '.repos/nexmo-community/nexmo-php-quickstart/voice/connect-call-slim/index.php'
-from_line: 2
+    - 'slim/slim:^3.8'
+source: .repos/nexmo-community/nexmo-php-quickstart/voice/connect-call-slim/index.php
+from_line: 6
+to_line: 22
 file_name: index.php
-run_command: php -t . -S localhost:3000
+run_command: 'php -t . -S localhost:3000'
