--- a/_examples/voice/receive-an-inbound-call/python.yml
+++ b/_examples/voice/receive-an-inbound-call/python.yml
@@ -4,12 +4,12 @@ language: python
 dependencies:
     - '''flask>=1.0'''
 code:
-    source: .repos/nexmo-community/nexmo-python-quickstart/voice/inbound_call.py
+    source: .repos/nexmo-community/nexmo-python-quickstart/voice/receive-an-inbound-call.py
     from_line: 8
     to_line: 20
 client:
-    source: .repos/nexmo-community/nexmo-python-quickstart/voice/inbound_call.py
+    source: .repos/nexmo-community/nexmo-python-quickstart/voice/receive-an-inbound-call.py
     from_line: 3
     to_line: 5
-file_name: inbound_call.py
-run_command: 'python3 inbound_call.py'
+file_name: receive-an-inbound-call.py
+run_command: 'python3 receive-an-inbound-call.py'
